// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Password Reset Components should shallow render correctly PasswordReset 1`] = `
<Container
  className="password-reset-container"
  fluid={false}
>
  <Form
    className="password-reset-form"
    inline={false}
    onSubmit={[Function]}
  >
    <FormGroup
      controlId="PasswordResetEmail"
    >
      <FormLabel
        column={false}
        srOnly={false}
      >
        Send Password Reset Link
      </FormLabel>
      <FormControl
        name="email"
        onChange={[Function]}
        placeholder="Enter email"
        required={true}
        type="email"
        value=""
      />
    </FormGroup>
    <Button
      active={false}
      disabled={false}
      type="submit"
      variant="primary"
    >
      Submit
    </Button>
  </Form>
</Container>
`;

exports[`Test Password Reset Components should shallow render correctly PasswordResetConfirm 1`] = `
<Container
  className="password-reset-container"
  fluid={false}
>
  <Form
    className="password-reset-form"
    inline={false}
    onSubmit={[Function]}
  >
    <FormGroup
      controlId="formBasicResetPassword"
    >
      <FormLabel
        column={false}
        srOnly={false}
      >
        New Password
      </FormLabel>
      <FormControl
        name="new_password"
        onChange={[Function]}
        placeholder="Enter New Password"
        required={true}
        type="password"
      />
    </FormGroup>
    <FormGroup
      controlId="formBasicRetypePassword"
    >
      <FormLabel
        column={false}
        srOnly={false}
      >
        Retype Password
      </FormLabel>
      <FormControl
        name="re_new_password"
        onChange={[Function]}
        placeholder="Retype New Password"
        required={true}
        type="password"
      />
    </FormGroup>
    <Button
      active={false}
      disabled={false}
      type="submit"
      variant="primary"
    >
      Submit
    </Button>
  </Form>
</Container>
`;
